[metadata]
name = ro
version = 0.1.0
license = MIT
description = re-organize pictures by resulotiuoin
long_description = file: README.md
author = kunihir0
classifiers=
   <Development Status :: 2 - Pre-Alpha>
   <Environment :: Console>
   <Intended Audience :: End Users/Desktop>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires = 


[options.packages.find]
where=src